--- a/11-step-by-step-secure.Rmd
+++ b/11-step-by-step-secure.Rmd
@@ -7,12 +7,12 @@ try({
 })
 ```
 
-# Build yourself a safety net {#build-yourself-safety-net}
+# Build Yourself a Safety Net {#build-yourself-safety-net}
 
-> "Don't fuck over Future You"\
+> Don't fuck over Future You\
 > `r right_link('JD', 'https://twitter.com/CMastication')`
 
-Strengthening your app means two things: testing, and locking the application environment.
+Strengthening your app means two things: testing and locking the application environment.
 
 ## Testing your app
 
@@ -20,7 +20,7 @@ The process of getting your application production-ready implies that the applic
 With a robust testing suite, you will develop, maintain, and improve in a safe environment and ensure your project sustainability.
 What will you be testing?
 Both sides of the application: the business logic and the user interface.
-And also, the application load, *i.e* how much time and memory is required when your application starts being used by a significant amount of users, be it from the user perspective (how long does it take to complete a full scenario) and from the server perspective (how much memory is needed for my app to run).
+And also, the application load, *i.e* how much time and memory are required when your application starts being used by a significant number of users, be it from the user perspective (how long does it take to complete a full scenario) and from the server perspective (how much memory is needed for my app to run).
 
 ### Testing the business logic
 
@@ -29,21 +29,21 @@ If you have been following the good practices we have listed in previous chapter
 -   The business-logic functions are separated from your interactive-logic functions.
 -   Your application is inside a package.
 
-On top of being a sane organization approach, **using this separation inside a package structure allows to leverage all the tooling that has been built for testing "standard" packages**.
+On top of being a sane organization approach, **using this separation inside a package structure allows you to leverage all the tooling that has been built for testing "standard" packages**.
 
 R developers have been developing packages for a long time, and at the time of writing these lines (April 2020), more than 15,000 packages are available on CRAN.
 To sustain these developments, a lot of tools have been created to secure the development process, and especially tools for creating unit tests for your package.
 
 Unit tests are a general concept in software engineering that describes the process of writing a form of assessment to check the validity of your code.
 A simplified explanation is that if you write a function called `meaning_of_life` that returns `42`, you will expect this function to always return `42`, and to be alerted if ever this value changes.
-Using unit tests is a way to secure your work in the future, be it for future you, for your collaborator, or for anybody wanting to collaborate to the project: if anyone comes and change the code behind the `meaning_of_life()` function, and the result is no longer `42`, the developer working on this piece of code will be able to catch it.
+Using unit tests is a way to secure your work in the future, be it for future you, for your collaborator, or for anybody wanting to collaborate on the project: if anyone comes and change the code behind the `meaning_of_life()` function, and the result is no longer `42`, the developer working on this piece of code will be able to catch it.
 The general idea is to detect bugs and breaking changes at the moment they are happening, not once it is too late.
 
 There are several packages in R that can be used to implement unit testing, and you can even implement your own tests.
 One of the most popular right now [^step-by-step-secure-1] is `{testthat}` [@R-testthat].
-This testing framework lets you write a series of tests and expectations, which are then launched when calling `test()` from `{devtools}` [@R-devtools], either locally or in you CI system.
+This testing framework lets you write a series of tests and expectations, which are then launched when calling `test()` from `{devtools}` [@R-devtools], either locally or in your CI system.
 
-[^step-by-step-secure-1]: Based on the number of Reverse dependencies & suggests at <https://cran.r-project.org/web/packages/testthat/index.html>
+[^step-by-step-secure-1]: Popularity based on the number of reverse dependencies and suggests, as shown on <https://cran.r-project.org/web/packages/testthat/index.html>.
 
 Here is an example of testing that the `meaning_of_life` will always be `42`.
 
@@ -63,15 +63,15 @@ If you want to learn more about how to use `{testthat}`, you can refer to the fo
 
 -   [`{testthat}` online documentation](https://testthat.r-lib.org/)
 
--   [Chapter 10 Testing - R Packages](https://r-pkgs.org/tests.html)
+-   [R Packages - Chapter 10 Testing](https://r-pkgs.org/tests.html)
 
--   [Part 5: Test and Code Coverage - Building a package that lasts --- eRum 2018 workshop](https://speakerdeck.com/colinfay/building-a-package-that-lasts-erum-2018-workshop?slide=107)
+-   [Building a package that lasts, eRum 2018 workshop - Part 5: Test and Code Coverage](https://speakerdeck.com/colinfay/building-a-package-that-lasts-erum-2018-workshop?slide=107)
 
 ### `shiny::testServer()`
 
 At the time of writing these lines, the `{shiny}` team is actively working on a new way to test `{shiny}` server functions.
-These features are still a work-in-progress, and are not available in the stable version of `{shiny}` we have used in this book (`r packageVersion("shiny")`).
-Given that these features are still subject to change, we will not go into details about these new features, but here is a preview of what it will look like:
+These features are still a work in progress, and are not available in the stable version of `{shiny}` we have used in this book (`r packageVersion("shiny")`).
+Given that these features are still subject to change, we will not go into detail about these new features, but here is a preview of what it will look like:
 
 ```{r 11-step-by-step-secure-2, eval = FALSE}
 # Given the following module
@@ -105,7 +105,7 @@ testModule(computation_module_server, {
 })
 ```
 
-This methodology is still under-development, so we won't go deeper into this subject, but if you want to follow the update on this topic, please refer to the [Server function testing with Shiny](https://shiny.rstudio.com/articles/integration-testing.html) article on the `{shiny}` website.
+This methodology is still under development, so we won't go deeper into this subject, but if you want to follow the update on this topic, please refer to the [Server function testing with Shiny](https://shiny.rstudio.com/articles/integration-testing.html) article on the `{shiny}` website.
 
 ### Testing the interactive logic
 
@@ -115,10 +115,10 @@ There are several tools from the web development world that can be used to do ex
 
 #### A. `puppeteer` {.unnumbered}
 
-`puppeteer` is a NodeJS module that drives a Google Chrome headless session and mimic a session on the app.
+`puppeteer` is a NodeJS module that drives a Google Chrome headless session and mimics a session on the app.
 
 And good news, there is a Google Chrome extension, called [Puppeteer Recorder](https://chrome.google.com/webstore/detail/puppeteer-recorder/djeegiggegleadkkbgopoonhjimgehda), that allows you to create, while visiting a webpage, the `pupepeteer` script to reproduce your visit.
-Here is, for example, a very small javascript script for testing `{hexmake}` [@R-hexmake], generated by this extension.
+Here is, for example, a very small JavaScript script for testing `{hexmake}` [@R-hexmake], generated by this extension.
 
 ``` {.javascript}
 // Require the node module
@@ -141,10 +141,10 @@ await page.waitForSelector('.row > .col > \
 })()
 ```
 
-Be aware though that this extension does not record everything, at least with the version used while writing this book (`0.7.1`).
+Be aware, though, that this extension does not record everything, at least with the version used while writing this book (`0.7.1`).
 For example, typing inside a text input is not recorded: that is completely doable inside `puppeteer`, yet not recorded by this extension [^step-by-step-secure-2] .
 
-[^step-by-step-secure-2]: See [puppeteer/issues/441](https://github.com/puppeteer/puppeteer/issues/441) for the code to set the text input values.
+[^step-by-step-secure-2]: See <https://github.com/puppeteer/puppeteer/issues/441> for the code to set the text input values.
 
 Once you have this piece of code, put it into a NodeJS script, and replay the session as many time as you need.
 If ever one of the steps can not be replayed as recorded, the script will fail, notifying you of a regression.
@@ -173,10 +173,10 @@ test <- crrry::CrrryOnPage$new(
 ```
 
     Running \
-      '/Applications/Google Chrome.app/Contents/MacOS/Google Chrome' \
-      --no-first-run --headless \
+      '/Applications/Google Chrome.app/Contents/MacOS/Google Chrome'
+      --no-first-run --headless 
       '--user-data-dir=/Users/colin/Library/Application Support/
-        r-crrri/chrome-data-dir-dhutmfux' \
+        r-crrri/chrome-data-dir-dhutmfux' 
       '--remote-debugging-port=40698'
 
 ```{r 11-step-by-step-secure-4, eval = FALSE}
@@ -194,7 +194,7 @@ You can then call one of the `test` object methods:
 -   `wait_for()` waits for a JavaScript condition to be TRUE
 -   `click_on_id` clicks on a given id
 
-Of course, the interesting part is doing "bulk testing" of your application, for example by setting a series of values to an input:
+Of course, the interesting part is doing "bulk testing" of your application, for example, by setting a series of values to an input:
 
 ```{r 11-step-by-step-secure-5, eval = FALSE}
 for (i in letters[1:5]){
@@ -238,9 +238,9 @@ In other words, if you develop and think "a user will never do that", just expec
 But how can we get prepared for the unexpected?
 How can we test the "crazy behavior" that user will adopt?
 In web development, there exists a methodology called "Monkey testing", which consists of **launching a series of random event on a webpage: random text in input, scrolling, clicking, zooming... and see if the application crashes or not**.
-This software testing method allows to test the robustness of the application, by seeing how much it can handle unexpected behaviors.
+This software testing method allows you to test the robustness of the application, by seeing how well it can handle unexpected behaviors.
 
-Several JavaScript libraries exist when it comes to monkey testing, one of the most popular (and easy to use) library is called [`gremlin.js`](https://github.com/marmelab/gremlins.js).
+Several JavaScript libraries exist when it comes to monkey testing, one of the most popular (and easy to use) libraries is called [`gremlin.js`](https://github.com/marmelab/gremlins.js).
 This library is particularly interesting when it comes to `{shiny}` as it does not need external installation: you can add the library as a bookmark on your browser, navigate to the application, and launch the testing (click on the "Generate Bookmarklet" link on the [top of the README]((https://github.com/marmelab/gremlins.js))).
 Figure \@ref(fig:11-step-by-step-secure-7) show an example of running gremlins on the prenoms application.
 
@@ -284,7 +284,7 @@ test$stop()
 #### C. `{shinytest}` {.unnumbered}
 
 Finally, if you prefer a `{shiny}` specific package, you can go for `{shinytest}` [@R-shinytest].
-This package, created and maintained by RStudio, **allows you to do a series of screenshots of your application, and then replays your app and compare the previously taken screenshots to the current state of your application**, allowing you to detect any changes in the interface.
+This package, created and maintained by RStudio, **allows you to do a series of screenshots of your application, and then replays your app and compares the previously taken screenshots to the current state of your application**, allowing you to detect any changes in the interface.
 
 If you are building your application with `{golem}` [@R-golem], you will need to add an `app.R` file at the root of your package, then run `shinytest::recordTest()`:
 
@@ -297,7 +297,7 @@ shinytest::recordTest()
 ```
 
 Once this function is run, a new window opens: it contains your app, and a "Screenshot" button on the right.
-Using this button, you can take various recording of your shiny application at different states, as shown in figure \@ref(fig:11-step-by-step-secure-10).
+Using this button, you can take various recordings of your shiny application at different states, as shown in Figure \@ref(fig:11-step-by-step-secure-10).
 
 (ref:shinytestcap) General view of a `{shinytest}` window.
 
@@ -322,7 +322,7 @@ try({system("docker rm hexmake")})
 #### A. `{shinyloadtest}` {.unnumbered}
 
 `{shinyloadtest}` [@R-shinyloadtest] **tests how an application behaves when one, two, three, twenty, one hundred users connect to the app and use it**, and gives you a visual report about the connection and response time of each session.
-The idea with `{shinyloadtest}` is to first record a session where you mimic a user behavior, then `shinycannon`, a command line tool coming with `{shinyloadtest}`, replays the recording several times.
+The idea with `{shinyloadtest}` is to first record a session where you mimic a user behavior, then `shinycannon`, a command line tool that comes with `{shinyloadtest}`, replays the recording several times.
 Once the session has been replayed several times mimicking the session you have recorded, you have access to a report of the behavior of your app.
 
 ```{r 11-step-by-step-secure-13 }
@@ -402,7 +402,7 @@ dplyr::glimpse(head(shinyload_runs))
 Then, `{shinyloadtest}` comes with a series of plotting functions that can be used to analyze your recording.
 For example:
 
--   `slt_session_duration()` plots the session duration, with the various types of event that takes computation time: JS and CSS load, R computation...
+-   `slt_session_duration()` plots the session duration, with the various types of events that take computation time: JS and CSS load, R computation, etc.
 
 (ref:sessionduration) Session duration
 
@@ -427,7 +427,7 @@ And if you need to bundle everything into an HTML reports, `shinyloadtest_report
 shinyloadtest_report(shinyload_runs)
 ```
 
-This function will generate an HTML report of all the things computed by `{shinyloadtest}`, as show in figure \@ref(fig:11-step-by-step-secure-23).
+This function will generate an HTML report of all the things computed by `{shinyloadtest}`, as shown in Figure \@ref(fig:11-step-by-step-secure-23).
 
 (ref:shinyloadtestreport) Webpage generated by `shinyloadtest_report()`
 
@@ -435,25 +435,25 @@ This function will generate an HTML report of all the things computed by `{shiny
 knitr::include_graphics("img/shinyloadtestreport.png")
 ```
 
-To sum up with a step by step guide:
+To sum up with a step-by-step guide:
 
--   If the shiny app is only available on your machine, launch a process with `{processx}` [@R-processx], or in another R session, that launches the application.
+-   If the shiny app is only available locally, on your machine, then launch a process with `{processx}` [@R-processx], or in another R session, that launches the application.
     You can either set the port with `options('shiny.port'= 2811)`, or let shiny decide for you.
     Be sure that the process is running.
-    If the app is online, use the online url (and make sure you have access to the app).
+    If the app is online, use the online URL (and make sure you have access to the app).
 
 -   Run `shinyloadtest::record_session(url)`.
     You should probably set a different port for `{shinyloadtest}`, so that it does not try to connect on port 80.
 
--   Play around with your app, record a scenario of usage
+-   Play around with your app; record a scenario of usage.
 
 -   Close the tab where the app is running.
 
--   Return to your terminal, and run the `shinycannon` command line tool
+-   Return to your terminal, and run the `shinycannon` command line tool.
 
--   Wait for the process to be finished
+-   Wait for the process to be finished.
 
--   Go back to R, and then you can analyse the data from the recordings, either manually or by generating the html report
+-   Go back to R, and then you can analyze the data from the recordings, either manually or by generating the HTML report.
 
 #### B. `{shinyloadtest}`, `{crrry}`, and `{dockerstats}` {.unnumbered}
 
@@ -466,7 +466,7 @@ You can get the `{dockerstats}` package from GitHub with:
 remotes::install_github("ColinFay/dockerstats")
 ```
 
-Or from npm via:
+Or from NPM via:
 
 ``` {.bash}
 npm install -g r-dockerstats
@@ -476,9 +476,9 @@ npm install -g r-dockerstats
 library(dockerstats)
 ```
 
-With these stats, we can monitor the load on the app when it is run in a docker container.
+With these stats, we can monitor the load on the app when it is run in a Docker container.
 
-We will start by launching the container using a `system()` call: here, we are running the `{hexmake}` application, bundled in the `colinfay/hexmake` docker image, on port 2811.
+We will start by launching the container using a `system()` call: here, we are running the `{hexmake}` application, bundled in the `colinfay/hexmake` Docker image, on port 2811.
 We also make sure we give it a name with `--name`, so that we can call it in our `dockerstats()` call later on.
 
 ```{r 11-step-by-step-secure-26, echo = FALSE, error = TRUE, eval = TRUE, cache=TRUE}
@@ -519,7 +519,7 @@ dockerstats("hexmake") %>%
 Of course, right now nobody is using the app, so the usage can be pretty small.
 But let's push it a little bit by mimicking a lot of connections.
 
-To do that, we can replay our `shinycannon` call, with at the same time using the `dockerstats_recurse()` function, that will recursively call `dockerstats()` on a regular interval.
+To do that, we can replay our `shinycannon` call, and at the same time use the `dockerstats_recurse()` function, which will recursively call `dockerstats()` on a regular interval.
 
 ```{bash 11-step-by-step-secure-29, eval = FALSE}
 # Replaying the recording
@@ -530,7 +530,8 @@ shinycannon shinylogs/recording.log \
   --output-dir shinylogs/run3
 ```
 
-Let's launch at the same time a `dockerstats_recurse()` For example, here, we will print, on each loop, the `MemUsage` of the container, then saving the data inside a `dockerstats.csv` file.
+Let's launch at the same time a `dockerstats_recurse()`.
+For example, here, we will print, on each loop, the `MemUsage` of the container, then save the data inside a `dockerstats.csv` file.
 
 ```{r 11-step-by-step-secure-30, eval = FALSE}
 # Calling recursive the dockerstats function. 
@@ -548,7 +549,7 @@ dockerstats_recurse(
 )
 ```
 
-Figure \@ref(fig:11-step-by-step-secure-31) is what both these processes look side to side.
+Figure \@ref(fig:11-step-by-step-secure-31) shows these processes side to side.
 
 (ref:dockerstatscap) `{dockerstats}` and `shinycannon` running side-by-side at the same time.
 
@@ -575,7 +576,7 @@ dplyr::glimpse(head(docker_stats))
 try({system("docker kill hexmake")})
 ```
 
-If you need a deeper look into the connection between application actions and the docker stats, you can also combine `{dockerstats}` with `{crrry}`, the idea being that you can record the CPU usage at the exact moment the application performs a specific computation.
+If you need a deeper look into the connection between application actions and the Docker stats, you can also combine `{dockerstats}` with `{crrry}`, the idea being that you can record the CPU usage at the exact moment the application performs a specific computation.
 
 Let's record the computation of the `hexmake` container containing the same app as before.
 
@@ -717,7 +718,7 @@ try({
 
 ```
 
-And draw a small graph of this evolution:
+And draw a small graph of this evolution, shown in Figure \@ref(fig:11-step-by-step-secure-43):
 
 ```{r 11-step-by-step-secure-42, echo = FALSE}
 results <- readRDS("dataset/results.RDS")
@@ -767,26 +768,26 @@ One of the challenges of building an app that needs to be sent to production is 
 What does this mean?
 **When building a production application, you are building a piece of software that will be launched on another computer, be it a server in the cloud or someone else's computer**.
 Once your app is built, there are few chances that you will launch it on your own computer and that external users will connect to your computer.
-What will happen is that you will either give your users a package (which will be the simplest way to share it: bundle the packaged app to a `tar.gz`, then let people install it either manually or from a package repository), or a URL where they can connect and use your app.
+You will either give your users a package (which will be the simplest way to share it: bundle the packaged app to a `tar.gz`, then let people install it either manually or from a package repository), or a URL where they can connect and use your app.
 
 If you follow the `{golem}` workflow and all the good practices for a solid package, the application you have built should be deployable on another computer that has R.
-In that second case, **you will have to think about how you can create your app in a reproducible environment**: in other words, be sure that the app is deployed under the same configuration as your local application---R version, package versions, system requirements, environment variables...
+In that second case, **you will have to think about how you can create your app in a reproducible environment**: in other words, be sure that the app is deployed under the same configuration as your local application---R version, package versions, system requirements, environment variables, etc.
 
-To help you achieve that, we will introduce two tools in the next section: `{renv}` [@R-renv], and [Docker](https://www.docker.com/).
+To help you achieve that, we will introduce two tools in the next section: `{renv}` [@R-renv] and [Docker](https://www.docker.com/).
 
 ### `{renv}`
 
 #### A. About `{renv}` {.unnumbered}
 
-How do we make sure the package versions we have installed on our machine stays the same in the production environment?
+How do we make sure the package versions we have installed on our machine stay the same in the production environment?
 And also, how can we be sure that, working as a team, we will be able to work together using the same package versions?
 
 From one package version to another, functions and behaviors change.
-Most of the time, new version means new functions, and new features.
-But from time to time, a new version means breaking change**s. Monitoring these changes and how they potentially break our code is an hard task: be it because checking versions of packages on various machines can take time**, or because debugging these bugs in your application logs is not straightforward.
-And of course, the moment when we discover the error might not be the perfect time for us, as we might not have enough free time on our calendar to debug the application which has stopped running...
+Most of the time, a new version means new functions and new features.
+But from time to time, a new version means breaking change**s. Monitoring these changes and how they potentially break our code is a hard task: because checking versions of packages on various machines can take time**, or because debugging these bugs in your application logs is not straightforward.
+And of course, the moment when we discover the error might not be the perfect time for us, as we might not have enough free time on our calendar to debug the application that has stopped running.
 
-Let's take for example this traceback from the logs of an application we sent one day on a Shiny Server:
+Let's take, for example, this traceback from the logs of an application we sent one day on a `Shiny Server`:
 
 ``` {.bash}
 root@westeros-vm:/var/log/shiny-server# cat thewall(...).log
@@ -821,8 +822,8 @@ An irrecoverable exception occurred. R is aborting now ...
 
 Pretty hard to debug, isn't it?
 What has actually happened?
-On that specific case, it turned out that the package version from `{geojsonsf}` [@R-geojsonsf] was `1.2.1` on our development machine, and the one on the `{shiny}` server was updated to `1.3.0`, and there was a breaking change in the package, as shown in figure \@ref(fig:11-step-by-step-secure-44).
-These kind of bugs are even harder to detect as `{geojsonsf}` was not a direct dependency of our app, but a dependency of one of our dependency, making it slightly more complex to identify.
+On that specific case, it turned out that the package version from `{geojsonsf}` [@R-geojsonsf] was `1.2.1` on our development machine, and the one on the `{shiny}` server was updated to `1.3.0`, and there was a breaking change in the package, as shown in Figure \@ref(fig:11-step-by-step-secure-44).
+This bug was hard to detect as `{geojsonsf}` was not a direct dependency of our app, but a dependency of one of our dependencies, making it slightly more complex to identify.
 
 (ref:geojsoncap) Breaking changes in `{geojsonsf}`, a dependency of a dependency of our `{shiny}` application.
 
@@ -830,18 +831,18 @@ These kind of bugs are even harder to detect as `{geojsonsf}` was not a direct d
 knitr::include_graphics("img/geojson.png")
 ```
 
-The same thing could have happen if working as a team: one of the computer has an old version, when another one has updated to a more recent one.
+The same thing could have happened if working as a team: one of the computers has an old version, when another one has updated to a more recent one.
 How do we prevent that?
-This is where the `{renv}` package comes into play: this package allows to have a project-based library, instead of a global one.
-In other words, instead of having a library that is global to your machine, `{renv}` allows to specify packages with fixed versions for a project.
-That means that you can have `{geojsonsf}` version `1.2.1` in one of your project, and the `1.3.0` in another, with the two not conflicting with each other.
+This is where the `{renv}` package comes into play: this package allows you to have a project-based library, instead of a global one.
+In other words, instead of having a library that is global to your machine, `{renv}` allows you to specify packages with fixed versions for a project.
+That means that you can have `{geojsonsf}` version `1.2.1` in one of your projects, and version `1.3.0` in another, with the two not conflicting with each other.
 
 #### B. Using `{renv}` {.unnumbered}
 
-> Underlying the philosophy of renv is that any of your existing workflows should just work as they did befo.\
+> Underlying the philosophy of renv is that any of your existing workflows should just work as they did before.\
 > `r right_link("Introduction to renv", "https://rstudio.github.io/renv/articles/renv.html")`
 
-The first thing to do with `{renv}` is initiating it with the `init()` function.
+The first thing to do with `{renv}` is initiate it with the `init()` function.
 
 ```{r 11-step-by-step-secure-45, eval = FALSE}
 # Loading and initiaing {renv}
@@ -851,7 +852,7 @@ init()
 
 This function does several things:
 
--   Create/modify the `.Rprofile` file at the root of your project. Here is an example of what this files may look like inside an empty project:
+-   Create/modify the `.Rprofile` file at the root of your project. Here is an example of what this file may look like inside an empty project:
 
 ```{r 11-step-by-step-secure-46, comment="", echo = FALSE}
 readLines("data-raw/.Rprofile") %>%
@@ -878,8 +879,8 @@ We will not go into details on this folder, as it is a rather complex structure 
 With `{renv}`, you can choose to link this "local repository" to a local cache, *i.e* a folder which is common to all your projects and stores packages and the different versions you already installed (this is the default behavior) or to store the complete packages inside the project, making it portable.
 
 When you need a new package, you will have to install it in your local library.
-The fastest way to install new packages in your `{renv}` powered project is by using the `install.packages` function, which is shimmed by `{renv}`.
-This shim will search into the local cache to see if the package has already been cached, and if it is not, it will install and link it.
+The fastest way to install new packages in your `{renv}`-powered project is by using the `install.packages` function, which is shimmed by `{renv}`.
+This shim will search the local cache to see if the package has already been cached, and if it is not, it will install and link it.
 
 Now, we need to install a new package, for example `{attempt}` [@R-attempt]:
 
@@ -888,14 +889,14 @@ Now, we need to install a new package, for example `{attempt}` [@R-attempt]:
 install.packages("attempt")
 ```
 
-We will now add a little call to this library now:
+We will now add a little call to this library:
 
 ```{r 11-step-by-step-secure-49 }
 # Create a fake script that launches {attempt}
 write("library(attempt)", "script.R")
 ```
 
-Once you want to update your `{renv}` `Lockfile`, call `snapshot()`
+Once you want to update your `{renv}` `Lockfile`, call `snapshot()`.
 
 ```{r 11-step-by-step-secure-50, eval = FALSE}
 # Snapshoting the current status of the environment
@@ -903,7 +904,7 @@ renv::snapshot(confirm = FALSE)
 ```
 
 Note that if you are building an application as a package, use `renv::snapshot(type = "explicit")` (need version \> `0.9.3-99`): this will only capture the dependencies listed in the `DESCRIPTION` file.
-If you don't specify this `type = "explicit"`, `{renv}` will go and look for all the package it can find in your file, and notably in your `.Rhistory`, meaning that if you one day used a function from `{dplyr}` but that your current package doesn't use it anymore, `{renv}` will include it.
+If you don't specify this `type = "explicit"`, `{renv}` will go and look for all the packages it can find in your file, and notably in your `.Rhistory`, meaning that if you one day used a function from `{dplyr}` but your current package doesn't use it anymore, `{renv}` will include it.
 
 ```{r 11-step-by-step-secure-51, comment="", echo = FALSE}
 readLines("data-raw/renv.lock") %>%
@@ -911,19 +912,19 @@ readLines("data-raw/renv.lock") %>%
 ```
 
 And now that you have a reproducible `{renv}` library, what is next?
-Of course, if you are either working as a team or deploying to a server, you will have to restore the state of your project, which is now living somewhere else, inside your current project / deployment.
+Of course, if you are either working as a team or deploying to a server, you will have to restore the state of your project, which is now living somewhere else, inside your current project/deployment.
 And to do that, the function to call is `renv::restore()`, which will update your local project with the dependencies listed inside your `Lockfile`.
 
-To sum up, here are the step to follow:
+To sum up, here are the steps to follow:
 
--   Initiate the project with `renv::init()`
--   Install / remove packages
--   Take a `snapshot()` of the state of your project
--   `renv::restore()` the state of your project using `renv.lock`
--   Share `.Rprofile`, `renv.lock`, `renv/activate.R` and `renv/settings.dcf` files for reproducibility
+-   Initiate the project with `renv::init()`.
+-   Install/remove packages.
+-   Take a `snapshot()` of the state of your project.
+-   `renv::restore()` the state of your project using `renv.lock`.
+-   Share `.Rprofile`, `renv.lock`, `renv/activate.R` and `renv/settings.dcf` files for reproducibility.
 
 Of course, `renv::restore()` comes with another superpower: time traveling!
-If you decide to update a package in your project, and realize that this package makes the application crash (*e.g.* an update to `{geojsonsf}`), you can go back in time to a previous version of your library by calling the `restore()` function.
+If you decide to update a package in your project, and realize that this package makes the application crash (e.g., an update to `{geojsonsf}`), you can go back in time to a previous version of your library by calling the `restore()` function.
 
 There are more things you can do with `{renv}`.
 If you want to know more, we invite you to refer to the [official documentation](https://rstudio.github.io/renv).
@@ -940,13 +941,13 @@ The general idea is that with Docker, you are defining in a `Dockerfile` all the
 That way, if the `Dockerfile` can compile on your machine and if you can run it, it should work everywhere (of course, it is a little bit more complex than that, but you get the idea).
 
 Why Docker in the context of `{shiny}` apps?
-Because Docker allows you to abstract away the complexity of managing multiple versions of R and multiple version of the same package, or even different versions of the same system requirement.
-For example, let's take our example with the breaking change in `{geojsonsf}` we used in the previous section.
+Because Docker allows you to abstract away the complexity of managing multiple versions of R and multiple versions of the same package, or even different versions of the same system requirement.
+For example, let's take our example with the breaking change in `{geojsonsf}` that we used in the previous section.
 With Docker, we can safely specify a `1.2.1` version in our image, and changing versions on the server would not have broken our code.
 
 By using Docker for your deployment, you can build and deploy an application with the very same version of packages and R as the one on your computer.
 And of course, you can change them without breaking the rest of the machine: everything that happens in a container stays in a container.
-That way, if your are building your application with an older version of `{shiny}`, **you are sure that sending it to production will not break everything: the version inside the Docker is the same as the one from your machine**.
+That way, if you are building your application with an older version of `{shiny}`, **you are sure that sending it to production will not break everything: the version inside the Docker image is the same as the one from your machine**.
 And later, if you update `{shiny}` and start a new project, you can deploy your app with another version of the package.
 Same goes for your version of R.
 
@@ -954,15 +955,15 @@ Same goes for your version of R.
 
 Good news!
 If you are building your app with `{golem}`, the creation of the `Dockerfile` is just one function away!
-If you have a look at the `03_deploy.R` file in the `dev` folder, you will find a series of functions that can create the `Dockerfile` for your project: either as a generic docker image, or for `{shiny}`Proxy or Heroku.
+If you have a look at the `03_deploy.R` file in the `dev` folder, you will find a series of functions that can create the `Dockerfile` for your project: either as a generic Docker image, or for `{shiny}`Proxy or Heroku.
 
-For example, to create a `Dockerfile` for a `{golem}` project, you can run, from the root of your package:
+For example, to create a `Dockerfile` for a `{golem}` project, you can run the following, from the root of your package:
 
 ```{r 11-step-by-step-secure-52, eval=FALSE}
 golem::add_dockerfile()
 ```
 
-Let's take some time to understand this file, or and details how we could be building it from scratch.
+Let's take some time to understand this file, and detail how we could be building it from scratch.
 
 1.  `FROM`
 
@@ -978,7 +979,7 @@ cat("FROM", paste0(
 
 This line defines what version of R to use for deploying your application.
 This `FROM` line is the one that sets an image to start from: you rarely (if ever) build a Docker image from nothing, but instead you use an existing image on top of which you build your own image.
-Here, we choose one of the [r-ver](https://hub.docker.com/r/rocker/r-ver/) docker images, based on the output of:
+Here, we choose one of the [r-ver](https://hub.docker.com/r/rocker/r-ver/) Docker images, based on the output of:
 
 ```{r 11-step-by-step-secure-54, comment=""}
 R.Version()$version.string
@@ -986,14 +987,14 @@ R.Version()$version.string
 
 2.  `RUN`
 
-The `RUN` calls in the file refers to bash calls that are used to build the image.
+The `RUN` call in the file refers to bash calls that are used to build the image.
 For example, the second line of the `Dockerfile` installs all the system requirements needed by our application.
 
     RUN apt-get update && \
-    apt-get install -y  git-core \
-    libcurl4-openssl-dev libssh2-1-dev \
-    libssl-dev libxml2-dev make \
-    zlib1g-dev && rm -rf /var/lib/apt/lists/*
+      apt-get install -y  git-core \
+      libcurl4-openssl-dev libssh2-1-dev \
+      libssl-dev libxml2-dev make \
+      zlib1g-dev && rm -rf /var/lib/apt/lists/*
 
 In the subsequent `RUN` calls, `{golem}` chooses to call `remotes::install_version()` to be sure we install the version of the package that matches the one from your computer.
 
@@ -1056,7 +1057,7 @@ my_dock$EXPOSE(80)
 my_dock
 ```
 
-#### D. Docker & `{renv}` {.unnumbered}
+#### D. Docker and `{renv}` {.unnumbered}
 
 If you use `{renv}` to build your `{shiny}` application, it can also be used inside your Docker container.
 To make those two tools work together, you will have to copy the files produced by `{renv}` inside the container: `.Rprofile`, `renv.lock`, `renv/activate.R` and `renv/settings.dcf` files.
@@ -1067,13 +1068,13 @@ At the time of writing these lines, there is no native support of `{renv}` (with
 
 #### E. Develop inside a Docker container {.unnumbered}
 
-Developers have their own R versions and operating systems, which generally differs from the one used on the production server, leading to issues when it comes to deploying the application.
+Developers have their own R versions and operating systems, which generally differ from the one used on the production server, leading to issues when it comes to deploying the application.
 
 If you plan on using Docker as a deployment mechanism, you can also use Docker as a local developer environment.
 Thanks to the containers maintained by the [The Rocker Project](https://www.rocker-project.org/), it's possible to have a local environment that comes close to what you will find on the production server.
 What's even more interesting is that this project offers images that can contain RStudio server: that means that the application that you will deploy in production can have the very same configuration as the one developers are using on their local machine: thanks to these containers, developers can work on a version of R that matches the one from the production server, using packages that will exactly match the one used in production.
 
-Even more interesting is using RStudio inside Docker in combination with `{renv}`: the developers work on their machines, inside an IDE they know, and with system requirements (R versions, packages...) that can be reproduced on the production server!
+Even more interesting is using RStudio inside Docker in combination with `{renv}`: the developers work on their machines, inside an IDE they know, and with system requirements (R versions, packages, etc.) that can be reproduced on the production server!
 
 #### F. Read more about Docker {.unnumbered}
 
